# digital-stylist

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Appointment,-Email,-and-Support-Agents.md  Catalog-Feed-and-Chroma-Indexing.md  Chat-and-Invoke-Endpoints.md  Clienteling-App.md  Configuration-and-Providers.md  Connect-App.md  Core-Architecture.md  Customer-and-Intent-Agents.md  Data-Layer.md  Deployment-and-Infrastructure.md  Domain-Agents.md  Express-Orchestration-Gateway.md  Frontend-Applications.md  Getting-Started.md  Glossary.md  HTTP-API-Reference.md  LLM-and-Embedding-Providers.md  LangGraph-Multi-Agent-Pipeline.md  Logging-and-Structured-Events.md  MCP-(Model-Context-Protocol).md  MCP-Runtime-and-Client.md  MCP-Servers-and-Handlers.md  Observability-and-Operations.md  Overview.md  PostgreSQL-Schema-and-Bootstrap.md  Python-Worker-(FastAPI).md  README-WIKI  README.md  Repository-Structure.md  Stylist,-Catalog,-and-Explainability-Agents.md  Stylist-Worker-Auxiliary-Routes.md  StylistSettings-Reference.md  StylistState-and-Contracts.md  Vector-Catalog-(Chroma-and-In-Memory).md  docker-compose.yml  package-lock.json  (+2 more)
apps/clienteling/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/connect/: index.html  package.json  tailwind.config.ts  vite.config.ts
catalog_feed/: .gitignore  Dockerfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
catalog_feed/catalog_feed/: __init__.py  __main__.py  cli.py  documents.py  models.py  pipeline.py  ts_export.py
catalog_feed/catalog_feed/data/: customer-insights.ts  customers.ts  products.ts
catalog_feed/catalog_feed/fixtures/: products.json  sample_catalog.json
catalog_feed/catalog_feed/scripts/: export_products_json.ts
catalog_feed/catalog_feed/sources/: __init__.py  json_source.py  protocol.py
digital_stylist/: __init__.py  catalog.py  catalog_feed_cli.py  cli.py  config.py  fitting_room_api.py  graph.py  inference_defaults.py  llm.py  nodes.py  prompts.py  retail_api.py  seed_catalog.py  state.py  stylist_api.py  voice_intent_api.py  worker_app.py
digital_stylist/mcp/: runtime.py  (+1 more)
docker/: Dockerfile.orchestration  Dockerfile.worker
docs/: BUILDING_SIMILAR_PROJECT.md  PRODUCT_READINESS.md
orchestration/: package-lock.json  package.json
(+158 files in other folders)
